# tldrify

./: .gitignore  CLAUDE.md  Makefile  README.md  create_test_pdf.py  docker-compose.yml  pyproject.toml  requirements.txt  test_chunking.py  test_embeddings.py  test_full_pipeline.py  test_ocr.py  test_vector_db.py
.github/: DEVELOPMENT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: sync-taskmaster.yml  update-progress.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: ocr-poc-prd.txt  prd.txt
.taskmaster/tasks/: task_016.txt  task_017.txt  task_018.txt  (+8 more)
alembic/: env.py
docs/: README.md  mvp-roadmap.md  ocr-poc-implementation-plan.md  setup-complete.md  tech-decisions.md
exports/: chunks_10_test_text_debug.txt  chunks_10_test_text_detailed.txt  chunks_10_test_text_simple.txt  chunks_11_test_text_debug.txt  chunks_11_test_text_detailed.txt  chunks_11_test_text_simple.txt  chunks_12_test_text_debug.txt  chunks_12_test_text_detailed.txt  chunks_12_test_text_simple.txt  chunks_13_test_text_debug.txt  chunks_13_test_text_detailed.txt  chunks_13_test_text_simple.txt  chunks_6_test_text_debug.txt  chunks_6_test_text_detailed.txt  chunks_6_test_text_simple.txt  chunks_7_intro_debug.txt  chunks_7_intro_detailed.txt  chunks_7_intro_simple.txt  chunks_8_054d7902-6f47-4bfa-80c5-63bb6119deef_debug.txt  chunks_8_054d7902-6f47-4bfa-80c5-63bb6119deef_detailed.txt  chunks_8_054d7902-6f47-4bfa-80c5-63bb6119deef_simple.txt  chunks_9_test_text_debug.txt  chunks_9_test_text_detailed.txt  chunks_9_test_text_simple.txt
frontend/: package-lock.json  package.json
ocr-poc/: README.md
scripts/: create_issues_cli.sh  daily_log.sh  init_db.py  setup_project_board.sh  test_connection.py
src/: main.py
(+43 files in other folders)
